--- a/Header.css
+++ b/Header.css
@@ -6,17 +6,18 @@
 }
 .header{
   border:1px;
-  padding-left: 80px;
+  padding-left: 40px;
+  padding-rightt: 5px;
   display: inline-grid;
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 40px;
-  font-size: 35px;
+  font-size: 25px;
   margin-top: 30px;
 }
 
 @media(max-width:1140px){
   .header{
-    padding-left: 5px;
+    padding-left: 45px;
     font-size: 40px;
   }
 }
